--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,15 @@
-# .gitignore for Grails 1.2 and 1.3
-# Although this should work for most versions of grails, it is
-# suggested that you use the "grails integrate-with --git" command
-# to generate your .gitignore file.
 
-# web application files
-/web-app/WEB-INF/classes
+.gradle
+/build/
 
-# default HSQL database files for production mode
-/prodDb.*
+# Ignore Gradle GUI config
+gradle-app.setting
 
-# general HSQL database files
-*Db.properties
-*Db.script
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
 
-# logs
-/stacktrace.log
-/test/reports
-/logs
+# Cache of project
+.gradletasknamecache
 
-# project release file
-/*.war
-
-# plugin release files
-/*.zip
-/plugin.xml
-
-# older plugin install locations
-/plugins
-/web-app/plugins
-
-# "temporary" build files
-/target
+# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+# gradle/wrapper/gradle-wrapper.properties
