--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     compile "org.grails.plugins:hibernate4"
     compile "org.hibernate:hibernate-ehcache"
     compile "org.grails.plugins:views-json"
+    compile "org.grails:grails-dependencies"
     compile 'org.grails.plugins:qrcode:0.9'
     console "org.grails:grails-console"
     profile "org.grails.profiles:rest-api:3.1.7"
