HAL support working for Item resource

--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -72,10 +72,7 @@ grails:
             accept:
                 header:
                     userAgents:
-                        - Gecko
-                        - WebKit
-                        - Presto
-                        - Trident
+                        - None
         types:
             all: '*/*'
             atom: application/atom+xml
