--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
 language: groovy
-script: ./grailsw refresh-dependencies
-     && ./grailsw test-app
+script: ./grailsw refresh-dependencies && ./grailsw test-app
+before_install:
+  - chmod +x gradlew
