Travis CI configs edit to solve gradlew permission denied

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,4 @@ language: groovy
 script: ./grailsw refresh-dependencies && ./grailsw test-app
 before_install:
   - chmod +x gradlew
+  - chmod +x grailsw
