--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
 language: groovy
-script: ./grailsw refresh-dependencies && ./grailsw test-app
-before_install:
-  - chmod +x gradlew
-  - chmod +x grailsw
+jdk:
+ - oraclejdk7
+branches:
+ only:
+ - master
+
+before_script:
+ - chmod +x grailsw
+
+script: ./grailsw refresh-dependencies
+ && ./grailsw "test-app -integration"
