Travis CI configs edit to solve gradlew permission denied and again

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 language: groovy
+language: groovy
+
 jdk:
- - oraclejdk7
-branches:
- only:
- - master
+  - oraclejdk7
 
-before_script:
- - chmod +x grailsw
+before_install:
+- curl -s http://get.sdkman.io | bash
+- echo sdkman_auto_answer=true > ~/.sdkman/etc/config
+- source "/home/travis/.sdkman/bin/sdkman-init.sh"
+- sdk install grails 3.0.9
 
-script: ./grailsw refresh-dependencies
- && ./grailsw "test-app -integration"
+script: grails test-app --stacktrace
